class Cliente:
    def __init__(self, nombre):
        self.nombre = nombre
