@startuml Ej2
class Cliente {
  - nombre: String
  + __init__(nombre: String)
}

class Banco {
  - cola: Deque<Cliente>
  + __init__(): void
  + ingresar_cliente(c: Cliente): void
  + atender_clientes(cajeros: List<Cajero>): void
}

class Cajero {
  - nombre: String
  + __init__(nombre: String)
  + atender_cliente(c: Cliente): void
}

class TestCajaBanco {
  + main(): void «static»
}

Banco "1" *-- "0..*" Cliente : cola  
Cajero "1" --> "0..*" Cliente : atiende  
TestCajaBanco ..> Banco  
TestCajaBanco <.. Cajero
@enduml
